--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,45 +1,101 @@
+
+body {
+    background: linear-gradient(cornflowerblue, saddlebrown);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 table, th, td {
-    border: 2px solid black;
+    background: linear-gradient(slategrey, darkslategray);
+    font-style: italic;
+    font-size: 40px;
+    color: snow;
+    text-align: center;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+div {
+    text-align: center;
+}
+
+.login {
+    background-image: url("/images/carInterior.jpeg");
+    background-position: center;
+}
+
+.home {
+    background-image: url("/images/panamera.jpg");
+    background-position: center;
+}
+
+.add {
+    background-image: url("/images/panamera.jpg");
+    background-position: center;
+}
+
+.addTd {
+    font-size: 20px;
 }
 
 a {
     -moz-box-shadow: 0px 10px 14px -7px #276873;
     -webkit-box-shadow: 0px 10px 14px -7px #276873;
     box-shadow: 0px 10px 14px -7px #276873;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-    background: -moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-    background: -webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-    background: -o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-    background: -ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-    background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99', GradientType=0);
-    background-color: #599bb3;
+    background: linear-gradient(slategrey, darkslategray);
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
+    text-align: center;
     font-family: Arial;
     font-size: 20px;
     font-weight: bold;
     padding: 13px 32px;
     text-decoration: none;
     text-shadow: 0px 1px 0px #3d768a;
+
 }
 
 a:hover {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-    background: -moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-    background: -webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-    background: -o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-    background: -ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-    background: linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3', GradientType=0);
-    background-color: #408c99;
+    background: linear-gradient(darkgray, darkslategray);
 }
 
 a:active {
     position: relative;
     top: 1px;
 }
+
+.submit {
+    font-size: 30px;
+}
+
+.homeButton {
+    height: auto;
+    width: auto;
+    margin: 0.3em;
+}
+
+.paramButton {
+    height: auto;
+    width: 92%;
+    margin: 0.3em;
+}
+
+.returnButton {
+    margin-top: 6%;
+}
+
+.logoutButton {
+    margin-top: 30%;
+}
+
+
