--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -44,6 +44,10 @@ div {
     font-size: 20px;
 }
 
+.allTd {
+    font-size: 15px;
+}
+
 a {
     -moz-box-shadow: 0px 10px 14px -7px #276873;
     -webkit-box-shadow: 0px 10px 14px -7px #276873;
